# hh_api_2

./: .gitignore  README.md  db_config.py  main.py  pyproject.toml
data/temp/: companies.json
database/: db_creator.py  db_manager.py
fetch/: hh_api.py
src/: main.py
tests/: db_manager_test.py  hh_api_test.py
tests/data/: test_companies.json  test_fetch.json
utils/: db_manager.py  hh_api.py
