[tool.poetry]
name = "cw-5"
version = "0.1.0"
description = ""
authors = ["speedfreak <gdramze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
